--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String" ,"API_URL", '"https://api.unsplash.com/"'
+        buildConfigField "String" ,"ACCESS_KEY", '"bd62126574d597fdf8368caf9a5c9a1cd745d48952777cce8109a083cf8bfe1d"'
+        buildConfigField "String" ,"SECRET_KEY", '"f7230c8493ff88228d82f551294d23016caa635a6dbaa16705c7f16d42edd496"'
     }
     buildTypes {
         release {
@@ -31,4 +34,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
