--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    //Picasso
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    //Images
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     // koin for Android and AndroidX
-    implementation 'org.koin:koin-androidx-scope:2.0.0-beta-4'
-    implementation 'org.koin:koin-android-scope:2.0.0-beta-4'
+    implementation 'org.koin:koin-androidx-scope:1.0.1'
+    implementation 'org.koin:koin-android-scope:1.0.1'
 }
