--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
@@ -65,6 +64,7 @@ dependencies {
 
     //Images
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.r0adkll:slidableactivity:2.0.6'
 
     // koin for Android and AndroidX
     implementation 'org.koin:koin-androidx-scope:1.0.1'
