--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -10,14 +10,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.unsplashcoroutines"
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String" ,"API_URL", '"https://api.unsplash.com/"'
-        buildConfigField "String" ,"ACCESS_KEY", '"bd62126574d597fdf8368caf9a5c9a1cd745d48952777cce8109a083cf8bfe1d"'
-        buildConfigField "String" ,"SECRET_KEY", '"f7230c8493ff88228d82f551294d23016caa635a6dbaa16705c7f16d42edd496"'
     }
     buildTypes {
         release {
@@ -84,4 +81,5 @@ dependencies {
     implementation 'org.koin:koin-androidx-scope:1.0.2'
     implementation 'org.koin:koin-android-scope:1.0.2'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    compile project(path: ':data')
 }
