--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
 
-    implementation project(":domain")
+    implementation project(":data")
     implementation project(":domain")
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -81,5 +81,4 @@ dependencies {
     implementation 'org.koin:koin-androidx-scope:1.0.2'
     implementation 'org.koin:koin-android-scope:1.0.2'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
-    compile project(path: ':data')
 }
